2020-12-08  Dmitry V. Levin  <ldv@altlinux.org>

	* debuginfod-client.c (__libdwfl_debuginfod_init): Replace
	"libdebuginfod-" VERSION ".so" with DEBUGINFOD_SONAME in dlopen call.
	Do not fall back to dlopen of "libdebuginfod.so".

2020-12-01  Timm Bäder  <tbaeder@redhat.com>

	* link_map.c (dwfl_link_map_report): Removed consider_phdr function
	and inline code.

2020-11-28  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module):
	Use GElf_Addr to calculate note_vaddr instead of size_t.

2020-11-26  Timm Bäder  <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module):
	Remove consider_notes function. Inline code for type == PT_NOTE.

2020-11-26  Timm Bäder  <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (read_portion): New static function.
	(dwfl_segment_report_module): Remove read_portion function.
	Call static function with read_state, start and segment.

2020-11-26  Timm Bäder  <tbaeder@redhat.com>

	* dwfl_segment_report_module.c (struct read_state): New.
	(finish_portion): New static function.
	(dwfl_segment_report_module): Introduce read_state. Remove
	finish_portion function. Call static function with read_state.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	consider_phdr, do checks inline.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	consider_dyn, do checks inline.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Do one
	loop check for d32/d64 arrays.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Remove
	read_phdr, do check and call memory_callback directly.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>

	* segment_report_module.c (dwfl_segment_report_module): Do one
	loop check for p32/p64 arrays.

2020-11-23  Timm Bäder  <tbaeder@redhat.com>
